--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 					</div>
 					<div class="column">
 						<p class="paragraph-secondary">
-			                HTML,CSS,Bootstrap,Javascript,jQuery,Git,Github,Python,
-			                Django,Django REST, React, Nodejs, Postgres, MongoDb,Docker
+			                HTML, CSS,Bootstrap, Javascript, jQuery, Git, Github, Python, Django, Django REST, React, Nodejs, Postgres, MongoDb, Docker
 			              </p>
 					</div>
 				</div>
