--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<nav class="nav">
 			<a href="#" class="nav-logo">Kamal.</a>
 			<div class="nav-links">
-				<a class="nav-link" href="#">Blogs</a>
-				<a class="nav-link" href="#">Contact</a>
+				<a class="nav-link" href="Templates/blog.html">Blogs</a>
+				<a class="nav-link" href="./Templates/contact.html">Contact</a>
 			</div>
 		</nav>
 		</div>
