--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My portfolio</title>
-	<link rel="stylesheet" type="text/css" href="Static/Styles/style.css">
+	<link rel="stylesheet" type="text/css" href="./Static/Styles/style.css">
 </head>
 <body>
 	<header class="header">
@@ -15,7 +15,7 @@
 			</div>
 		</nav>
 		</div>
-		
+		 
 	</header>
 
 	<main>
